2021-04-12  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/reconnect.exp: Relax expected stepi output.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/rn-dl-bind.exp: Add ldflags=-Wl,-z,lazy.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/non-stop.exp: Adjust expected source lines.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/stepi.exp: Add {} options to prepare_for_testing.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/exception.cc (main): Update test source.
	* gdb.btrace/exception.exp: Update patterns.
	* gdb.btrace/function_call_history.exp: Likewise.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/unknown_functions.exp: Move -Wl,-x to ldflags.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/rn-dl-bind.exp: Replace reverse-step with
	reverse-continue to breakpoint.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/delta.exp: Remove instruction-history and
	function-call-history checks.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* README (Note): Add nopie_ldflag.
	* lib/gdb.exp (gdb_compile): Extend nopie handling.

2020-11-24  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/condbreak-multi-context.exp: Do not hard-code location
	indices.

2020-10-27  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/condbreak.exp: Update the completion tests to
	consider the '-force' flag.

2020-10-30  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/paginate-after-ctrl-c-running.exp: Update with no pagination
	behavior.
	* gdb.base/paginate-bg-execution.exp: Ditto.
	* gdb.base/paginate-inferior-exit.exp: Ditto.
	* gdb.base/double-prompt-target-event-error.c: Remove.
	* gdb.base/double-prompt-target-event-error.exp: Remove.

2020-10-29  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>
